syntax = "proto3";

service PaymentService {
    rpc GetAllPayments (Empty) returns (PaymentsList) {}
}

message Payment {
    int32 paymentId = 1;
    int32 bookingId = 2;
    int32 creditCardId = 3;
    string paymentStatus = 4;
    string createdAt = 5;
    string updatedAt = 6;
}


message Empty {}

message PaymentsList {
    repeated Payments payments = 1;
}